--- a/recipe.html
+++ b/recipe.html
@@ -6,11 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/recipe.css">
 
         <title>Food Generator</title>
 
     </head>
     <body>
+        <header>
+            <h1>Recipe Generator</h1>
+            <p class="white-text">Choose what you want and generate a random recipe</p>
+        </header>
             <div class="container">
                 <div class="text-center">
                     <div class="col-12">
@@ -24,6 +29,6 @@
 
 
 
-        <script src="script.js"></script>
+        <script src="./js/recipe.js"></script>
     </body>
     </html>
