--- a/recipe.html
+++ b/recipe.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" >
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
-        <title>Food Generator</title>
+    <title>Food Generator</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="text-center">
+        <div class="col-12">
+          <button type="button" class="btn btn-primary btn-lg" id="get recipe">
+            Get Recipe
+          </button>
+        </div>
+      </div>
+      <div id="Recipe"></div>
+    </div>
 
-    </head>
-    <body>
-            <div class="container">
-                <div class="text-center">
-                    <div class="col-12">
-                <button type="button" class="btn btn-primary btn-lg" id="get recipe">Get Recipe</button>
-                </div>
-                </div>
-                <div id="Recipe"></div>
-                    
-                </div>
-
-
-
-
-        <script src="script.js"></script>
-    </body>
-    </html>
+    <script src="recipe.js"></script>
+  </body>
+</html>
