added html droplist and searchbar with some css styling, and started to try and set up the api

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
             <div class="container">
                 <div class="text-center">
                     <div class="col-12">
+                        <div>
+                            <p>Search</p>
+                            <input type="text" placeholder="Ingredients" class="searchBar">
+                        </div>
+                        
+                        <div>
+                            <p>Type Selection</p>
+                            <select class="" name="Include" id="Include">
+                                <option value="">None</option>
+                                <option value="Caribbean">Caribbean</option>
+                                <option value="Italian">Italian</option>
+                                <option value="Greek">Greek</option>
+                                <option value="Chinese">Chinese</option>
+                                <option value="Thai">Thai</option>
+                                <option value="American">American</option>
+                                <option value="Cajun">Cajun</option>
+                                <option value="Mexican">Mexican</option>
+                            </select>
+                        </div>
                 <button type="button" class="btn btn-primary btn-lg" id="get recipe">Get Recipe</button>
                 </div>
                 </div>
