--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/recipe.css">
+        <link href="" id="sourceLink">
 
     <title>Food Generator</title>
 
@@ -37,7 +38,7 @@
                                 <option value="Mexican">Mexican</option>
                             </select>
                         </div>
-                <button type="button" class="btn btn-primary btn-lg" id="get recipe">Get Recipe</button>
+                <button type="button" class="btn btn-primary btn-lg" id="getRecipe">Get Recipe</button>
                 </div>
                 </div>
                 <div id="Recipe"></div>
@@ -45,7 +46,7 @@
                 </div>
 
 
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="./js/recipe.js"></script>
     </body>
