--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <option value="Mexican">Mexican</option>
                             </select>
                         </div>
-                <button type="button" class="btn btn-primary btn-lg" id="getRecipe">Get Recipe</button>
+                <button class="btn button-primary btn-lg" id="getRecipe">Get Recipe</button>
                 </div>
                 </div>
                 <div id="Recipe"></div>
@@ -50,7 +50,7 @@
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <script src="./js/recipe.js"></script>
+        <script src="./js/MealDB.js"></script>
     </body>
     </html>
 
