--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="text-center">
                     <div class="col-12">
                         <div class="mt-2 d-flex align">
-                            <p>Search</p>
+                            <!--<p>Search</p>
                             <input type="text" placeholder="Ingredients" class="searchBar">
                         </div>
                         
@@ -38,14 +38,14 @@
                                 <option value="American">American</option>
                                 <option value="Cajun">Cajun</option>
                                 <option value="Mexican">Mexican</option>
-                            </select>
+                            </select> -->
                         </div>
-                        <div class="d-flex justify-content-center mt-4 "></div>
+                        <div class="d-flex justify-content-center mt-4 ">
                 <button class="btn btn-success btn-lg" id="getRecipe">Get Recipe</button>
                 </div>
                 </div>
-                <div id="Recipe"></div>
-                    
+                <div class="mt-4" id="Recipe"></div>
+                </div>    
                 </div>
 
 
