made the video larger and adjust when the window is a different size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <header>
             <h1>Recipe Generator</h1>
-            <p class="white-text">Choose what you want and generate a random recipe with your choices</p>
+            <p class="white-text">Generate a <strong>Random</strong> recipe to <strong> your belly</strong></p>
         </header>
             <div class="container">
                 <div class="text-center">
